src/test/deca/context/invalid/mul_undefvar_mul_int_context.deca
// Description :
//
//      Test contextuellement incorrect de la multiplication  de la variable stockant la multiplication  sans définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= y*2;
}